[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Kakapo.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 99, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 5.0
scale_random = 0.5
color = Color( 0.996078, 1, 0, 1 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.277778 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 30.0
angular_velocity = 137.14
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 12.7
radial_accel_random = 1.0
damping = 10.0
damping_random = 0.2
scale = 5.0
color_ramp = SubResource( 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 23 )

[sub_resource type="Animation" id=2]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FeatherTrail:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RocketTrail:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FeatherTrail:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RocketTrail:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="RocketTrail" type="Particles2D" parent="."]
position = Vector2( 0.515251, -23.7015 )
amount = 100
lifetime = 5.0
local_coords = false
process_material = SubResource( 5 )

[node name="FeatherTrail" type="Particles2D" parent="."]
position = Vector2( 1.0305, -27.4645 )
emitting = false
amount = 100
lifetime = 10.0
local_coords = false
process_material = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.05945, -26.7621 )
texture = ExtResource( 1 )
hframes = 3
vframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 2 )
anims/Flying = SubResource( 3 )
anims/Jump = SubResource( 4 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -14.9405, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 17.0595, 0.2379 )
enabled = true
cast_to = Vector2( 0, 20 )

[connection signal="Bounced" from="." to="." method="_on_Player_Bounced"]
